# server/grpc.go
@@ -1,9 +1,7 @@
 package server
 
 import (
-	v1 "app/api/helloworld/v1"
 	"app/configs"
-	"app/internal/service"
 	"time"
 
 	"github.com/go-kratos/kratos/v2/log"
@@ -13,7 +11,7 @@ import (
 
 // NewGRPCServer new a gRPC server.
 // func NewGRPCServer(c *configs.ApplicationConfig, logger log.Logger) *grpc.Server {
-func NewGRPCServer(c *configs.ApplicationConfig, greeter *service.GreeterService, logger log.Logger) *grpc.Server {
+func NewGRPCServer(c *configs.ApplicationConfig, logger log.Logger) *grpc.Server {
 	var opts = []grpc.ServerOption{
 		grpc.Middleware(
 			recovery.Recovery(),
@@ -23,9 +21,9 @@ func NewGRPCServer(c *configs.ApplicationConfig, greeter *service.GreeterService
 		opts = append(opts, grpc.Address(c.Server.GRPC.Addr))
 	}
 	if c.Server.GRPC.Timeout != 0 {
-		opts = append(opts, grpc.Timeout(time.Duration(c.Server.GRPC.Timeout)))
+		opts = append(opts, grpc.Timeout(time.Duration(c.Server.GRPC.Timeout*int(time.Second))))
 	}
 	srv := grpc.NewServer(opts...)
-	v1.RegisterGreeterServer(srv, greeter)
+	// v1.RegisterGreeterServer(srv, greeter)
 	return srv
 }
